<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_black"
        android:orientation="vertical"
        android:weightSum="100"
        tools:context="com.matchday.android.ui.EditActivity">

        <RelativeLayout
            android:id="@+id/rlOne"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <com.matchday.android.ui.widget.LatoBoldTextView
                android:id="@+id/txt_cancel"
                style="@style/TextFontStyle"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/cancel"
                android:textSize="12sp" />

            <com.matchday.android.ui.widget.LatoBlackTextView
                android:id="@+id/txt_cards"
                style="@style/TextFontStyle"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="2dp"
                android:text="@string/cards"
                android:textSize="16sp" />

            <com.matchday.android.ui.widget.LatoBoldTextView
                android:id="@+id/txt_next"
                style="@style/TextFontStyle"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/next"
                android:textSize="12sp" />

        </RelativeLayout>


        <jp.co.cyberagent.android.gpuimage.GPUImageView
            android:id="@+id/img_gpu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="64" />

        <!--<FrameLayout-->
            <!--android:id="@+id/frame_image"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/txt_cards"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:seekbar_background="@android:color/black">-->

            <!--<ImageView-->
                <!--android:id="@+id/image_filter"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->

            <!--<jp.co.cyberagent.android.gpuimage.GPUImageView-->
                <!--android:id="@+id/image"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="360dp" />-->

            <!--<ImageView-->
                <!--android:id="@+id/img_template"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="360dp" />-->

            <!--<ImageView-->
                <!--android:id="@+id/img_team_one"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:seekbar_background="@drawable/dotted_border_view"-->
                <!--android:src="@drawable/ic_add_logo"-->
                <!--android:visibility="invisible" />-->

            <!--<ImageView-->
                <!--android:id="@+id/img_team_two"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:seekbar_background="@drawable/dotted_border_view"-->
                <!--android:src="@drawable/ic_add_logo"-->
                <!--android:visibility="invisible" />-->

            <!--<EditText-->
                <!--android:id="@+id/edit_text_headline"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingLeft="10dp"-->
                <!--android:paddingRight="10dp"-->
                <!--android:seekbar_background="@drawable/dotted_border_view"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:visibility="invisible" />-->

            <!--<EditText-->
                <!--android:id="@+id/edit_text_team_one"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingLeft="10dp"-->
                <!--android:paddingRight="10dp"-->
                <!--android:seekbar_background="@drawable/dotted_border_view"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:visibility="invisible" />-->

            <!--<EditText-->
                <!--android:id="@+id/edit_text_team_two"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingLeft="10dp"-->
                <!--android:paddingRight="10dp"-->
                <!--android:seekbar_background="@drawable/dotted_border_view"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:visibility="invisible" />-->

            <!--<TextView-->
                <!--android:id="@+id/txt_date"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingLeft="8.3dp"-->
                <!--android:paddingRight="8.3dp"-->
                <!--android:seekbar_background="@drawable/dotted_border_view"-->
                <!--android:visibility="invisible" />-->

            <!--<TextView-->
                <!--android:id="@+id/txt_place"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingLeft="8.3dp"-->
                <!--android:paddingRight="8.3dp"-->
                <!--android:seekbar_background="@drawable/dotted_border_view"-->
                <!--android:visibility="invisible" />-->

            <!--<TextView-->
                <!--android:id="@+id/txt_time"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingLeft="8.3dp"-->
                <!--android:paddingRight="8.3dp"-->
                <!--android:seekbar_background="@drawable/dotted_border_view"-->
                <!--android:visibility="invisible" />-->

            <!--<EditText-->
                <!--android:id="@+id/edit_text_separator_text"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingLeft="8.3dp"-->
                <!--android:paddingRight="8.3dp"-->
                <!--android:seekbar_background="@drawable/dotted_border_view"-->
                <!--android:visibility="invisible" />-->

            <!--<ImageView-->
                <!--android:id="@+id/img_separetor_line"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:seekbar_background="@drawable/dotted_border_view"-->
                <!--android:src="@drawable/ic_separator"-->
                <!--android:visibility="invisible" />-->

        <!--</FrameLayout>-->


        <!--<com.matchday.android.ui.widget.LatoMediumTextView-->
        <!--android:id="@+id/txt_match_day"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/frame_image"-->
        <!--android:layout_marginLeft="14dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:text="@string/match"-->
        <!--android:textColor="@color/red"-->
        <!--android:textSize="10sp" />-->

        <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/recyclerview_menu"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/txt_match_day"-->
        <!--android:layout_marginLeft="14dp"-->
        <!--android:layout_marginTop="10dp" />-->

        <!--<LinearLayout-->
        <!--android:id="@+id/layout_menu"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginBottom="14dp"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:orientation="horizontal">-->

        <!--<com.matchday.android.ui.widget.LatoBlackTextView-->
        <!--android:id="@+id/txt_cards_eff"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/cards"-->
        <!--android:textColor="@drawable/tab_text_selector"-->
        <!--android:textSize="14sp" />-->

        <!--<com.matchday.android.ui.widget.LatoBlackTextView-->
        <!--android:id="@+id/txt_effects"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/effects"-->
        <!--android:textColor="@drawable/tab_text_selector"-->
        <!--android:textSize="14sp" />-->

        <!--<com.matchday.android.ui.widget.LatoBlackTextView-->
        <!--android:id="@+id/txt_edit"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/edit"-->
        <!--android:textColor="@drawable/tab_text_selector"-->
        <!--android:textSize="14sp" />-->

        <!--</LinearLayout>-->

        <!-- our tablayout to display tabs  -->
        <com.matchday.android.ui.widget.CustomViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="28" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@android:color/transparent"
            android:minHeight="?attr/actionBarSize"
            android:textSize="14sp" />

        <!-- View pager to swipe views -->


    </LinearLayout>

    <com.matchday.android.ui.widget.TemplateFullLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:background="@android:color/white"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/frame_content_filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_gpu"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/content_filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_gpu"
        android:background="@color/color_black"
        android:clickable="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_filter_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <SeekBar
            android:id="@+id/seekBerFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:progressDrawable="@drawable/seekbar_style"
            android:thumb="@drawable/seekbar_thumb"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/img_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_apply" />

            <ImageView
                android:id="@+id/img_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_cancel" />
        </LinearLayout>

    </FrameLayout>
</FrameLayout>
